--- a/app/src/main/res/layout/vue_livre.xml
+++ b/app/src/main/res/layout/vue_livre.xml
@@ -12,8 +12,16 @@
         android:layout_height="17dp"
         android:text="TextView"
         android:textAlignment="center"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="48dp" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintHorizontal_bias="0.047"
+        app:layout_constraintVertical_bias="0.127" />
 
     <TextView
         android:id="@+id/txtAuteur"
@@ -21,6 +29,14 @@
         android:layout_height="19dp"
         android:text="TextView"
         android:textAlignment="center"
-        tools:layout_editor_absoluteX="164dp"
-        tools:layout_editor_absoluteY="48dp" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintHorizontal_bias="0.871"
+        app:layout_constraintVertical_bias="0.128" />
 </android.support.constraint.ConstraintLayout>
